# soroban-forge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  ISSUES.md  README.md  book.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
crates/binding-ts/: Cargo.toml  README.md
crates/binding-ts/src/: lib.rs
crates/ci-presets/: Cargo.toml  README.md  build.rs
crates/ci-presets/src/: lib.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: cli.rs  config.rs  error.rs  lib.rs  plugin.rs  render.rs
crates/doctor/: Cargo.toml  README.md
crates/doctor/src/: lib.rs
crates/scaffold/: Cargo.toml  README.md  build.rs
crates/scaffold/src/: lib.rs  manifest.rs
crates/templates/: Cargo.toml
crates/templates/src/: lib.rs
crates/testgen/: Cargo.toml  README.md
crates/testgen/src/: detect.rs  lib.rs
developer_notes/: benchmarks.md  ci-setup.md  code-style.md  error-codes.md  glossary.md  performance.md  release-notes.md  roadmap.md  security.md  testing-strategies.md  versioning.md
developer_notes/adr/: 001-storage-key-design.md  002-event-schema.md  003-error-code-registry.md
docs/: README.md  SUMMARY.md  access-control-patterns.md  architecture.md  auth.md  best-practices.md  cli-reference.md  configuration.md  contract-verification.md  contributing.md  debugging.md  deployment.md  environment.md  error-handling.md  events-reference.md  events.md  exit-codes.md  faq.md  fee-model.md  generated-bindings.md  getting-started.md  interoperability.md  multi-contract.md  network-config.md  plugins.md  quickstart.md  quiet-mode.md  smart-contract-patterns.md  soroban-sdk-tips.md  storage-ttl.md  storage.md  templates.md  testing-guide.md  testing.md  tooling.md  tutorial-zero-to-testnet.md  upgrade-guide.md  upgrades.md
docs/assets/: quickstart.cast
examples/: README.md
examples/amm/: README.md
examples/crowdfund/: README.md
examples/dao/: README.md
examples/escrow/: README.md
examples/hello-forge/: Cargo.toml  README.md  forge.toml
examples/hello-forge/.github/workflows/: build-test.yml  contract-size.yml  testnet-deploy.yml
examples/hello-forge/src/: test.rs
examples/hello-forge/tests/: forge_smoke.rs
examples/hello-forge/tests/common/: mod.rs
examples/lending/: README.md
examples/merkle-airdrop/: README.md
examples/multisig/: README.md
examples/nft/: README.md
examples/oracle/: README.md
examples/staking/: README.md
examples/subscription/: README.md
examples/timelock/: README.md
examples/token/: README.md
examples/vesting/: README.md
presets/: README.md
presets/github/: build-test.yml  contract-size.yml  release.yml  testnet-deploy.yml
presets/gitlab/: .gitlab-ci.yml
scripts/: ci-test.sh  deploy-all.sh  release.sh  seed-testnet.sh  setup.sh  verify-all.sh
src/: main.rs
templates/: README.md
templates/crowdfund/: README.md.hbs  template.toml
templates/crowdfund/src/: lib.rs  test.rs
templates/hello-world/: Cargo.lock.hbs  Cargo.toml.hbs  README.md.hbs  template.toml
templates/hello-world/src/: lib.rs  test.rs
templates/nft/: Cargo.lock.hbs  Cargo.toml.hbs  README.md.hbs
templates/nft/src/: lib.rs  test.rs
templates/token/: Cargo.toml.hbs  README.md.hbs  template.toml
templates/token/src/: lib.rs  test.rs
tests/: json.rs  quiet.rs
