[package]
name = "soroban-forge-ci-presets"
description = "CI/CD workflow presets for soroban-forge"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "soroban_forge_ci_presets"

[dependencies]
soroban-forge-core.workspace = true
clap.workspace = true
include_dir.workspace = true
toml.workspace = true
serde.workspace = true
log.workspace = true

[dev-dependencies]
tempfile.workspace = true
