[package]
name = "soroban-forge-core"
description = "CLI core and plugin framework for soroban-forge"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
clap.workspace = true
thiserror.workspace = true
serde.workspace = true
toml.workspace = true
log.workspace = true
env_logger.workspace = true

[dev-dependencies]
tempfile.workspace = true
