[package]
name = "soroban-forge-scaffold"
description = "Project scaffolding and contract templates for soroban-forge"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
soroban-forge-core.workspace = true
clap.workspace = true
include_dir.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
