[package]
name = "soroban-forge-templates"
description = "Template listing subcommand for soroban-forge"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
soroban-forge-core.workspace = true
soroban-forge-scaffold = { path = "../scaffold" }
clap.workspace = true
log.workspace = true
