[package]
name = "hello-forge"
version = "0.1.0"
edition = "2021"
authors = ["Joseph <josepholadele001@gmail.com>"]
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = "26.1.0"

[dev-dependencies]
soroban-sdk = { version = "26.1.0", features = ["testutils"] }
# soroban-env-host 26.x declares `ed25519-dalek >=2.0.0`, and dalek 3.0 broke
# its testutils; constrain to 2.x until upstream pins it. TODO(verify): remove
# once soroban-env-host releases a fix.
ed25519-dalek = { version = ">=2.0, <3" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
